[gd_scene load_steps=2 format=1]

[ext_resource path="res://Script/Lobby.gd" type="Script" id=1]

[node name="lobby" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="connect" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 121.0
margin/top = 76.0
margin/right = 861.0
margin/bottom = 508.0

[node name="Tabs" type="TabContainer" parent="connect"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 56.0
margin/right = 673.0
margin/bottom = 369.0
tab_align = 1
tabs_visible = true

[node name="Host" type="Tabs" parent="connect/Tabs"]

anchor/right = 1
anchor/bottom = 1
hint/tooltip = "Host"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[node name="serverName" type="LineEdit" parent="connect/Tabs/Host"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 278.0
margin/top = 30.0
margin/right = 426.0
margin/bottom = 59.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="serverNameLabel" type="Label" parent="connect/Tabs/Host/serverName"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -110.0
margin/top = 8.0
margin/right = -19.0
margin/bottom = 24.0
text = "Server Name:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="maxPlayers" type="SpinBox" parent="connect/Tabs/Host"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 279.0
margin/top = 79.0
margin/right = 437.0
margin/bottom = 103.0
range/min = 1.0
range/max = 20.0
range/step = 1.0
range/page = 0.0
range/value = 10.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="maxPlayersLabel" type="Label" parent="connect/Tabs/Host/maxPlayers"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -100.0
margin/top = 0.0
margin/right = -11.0
margin/bottom = 14.0
text = "Max Players"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="yourIPLabel" type="Label" parent="connect/Tabs/Host"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 150.0
margin/top = 122.0
margin/right = 284.0
margin/bottom = 136.0
text = "Your IP address:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="yourIP" type="ItemList" parent="connect/Tabs/Host/yourIPLabel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 123.0
margin/top = -12.0
margin/right = 284.0
margin/bottom = 102.0

[node name="hostButton" type="Button" parent="connect/Tabs/Host"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 166.0
margin/top = 231.0
margin/right = 438.0
margin/bottom = 272.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Host"
flat = false

[node name="Join" type="Tabs" parent="connect/Tabs"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[node name="hostList" type="ItemList" parent="connect/Tabs/Join"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 594.0
margin/bottom = 168.0

[node name="joinIP" type="Control" parent="connect/Tabs/Join"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 177.0
margin/right = 210.0
margin/bottom = 187.0

[node name="a" type="SpinBox" parent="connect/Tabs/Join/joinIP"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 75.0
margin/bottom = 25.0
range/min = 0.0
range/max = 255.0
range/step = 1.0
range/page = 0.0
range/value = 127.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="b" type="SpinBox" parent="connect/Tabs/Join/joinIP"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 0.0
margin/right = 155.0
margin/bottom = 25.0
range/min = 0.0
range/max = 255.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="c" type="SpinBox" parent="connect/Tabs/Join/joinIP"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 0.0
margin/right = 235.0
margin/bottom = 25.0
range/min = 0.0
range/max = 255.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="d" type="SpinBox" parent="connect/Tabs/Join/joinIP"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 0.0
margin/right = 315.0
margin/bottom = 25.0
range/min = 0.0
range/max = 255.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="joinIPLabel" type="Label" parent="connect/Tabs/Join/joinIP"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -100.0
margin/top = 0.0
margin/right = -60.0
margin/bottom = 14.0
text = "Join IP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="joinButton" type="Button" parent="connect/Tabs/Join"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 195.0
margin/top = 227.0
margin/right = 410.0
margin/bottom = 265.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Join Game"
flat = false

[node name="refresh" type="Button" parent="connect/Tabs/Join"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 79.0
margin/top = 230.0
margin/right = 166.0
margin/bottom = 264.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Refresh List"
flat = false

[node name="Settings" type="Tabs" parent="connect/Tabs"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[node name="nick" type="LineEdit" parent="connect/Tabs/Settings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 258.0
margin/top = 38.0
margin/right = 421.0
margin/bottom = 62.0
placeholder/text = "PlayerX"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="nickLabel" type="Label" parent="connect/Tabs/Settings/nick"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -99.0
margin/top = 3.0
margin/right = -24.0
margin/bottom = 17.0
text = "Player Nick:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="nickError" type="Label" parent="connect/Tabs/Settings/nick"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -100.0
margin/top = -30.0
margin/right = 167.0
margin/bottom = -5.0
custom_colors/font_color = Color( 1, 0.496094, 0.496094, 1 )
text = "Please enter a valid player username/nick"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="colorPick" type="ColorPickerButton" parent="connect/Tabs/Settings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 249.0
margin/top = 88.0
margin/right = 424.0
margin/bottom = 121.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
color = Color( 1, 1, 1, 1 )
edit_alpha = true

[node name="colorLabel" type="Label" parent="connect/Tabs/Settings/colorPick"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -91.0
margin/top = 1.0
margin/right = -6.0
margin/bottom = 29.0
text = "Player Color:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="wait" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 121.0
margin/top = 76.0
margin/right = 868.0
margin/bottom = 510.0

[node name="playerList" type="ItemList" parent="wait"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 68.0
margin/top = 35.0
margin/right = 665.0
margin/bottom = 336.0

[node name="start" type="Button" parent="wait"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 189.0
margin/top = 355.0
margin/right = 527.0
margin/bottom = 398.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start Game"
flat = false

[connection signal="pressed" from="connect/Tabs/Host/hostButton" to="." method="_on_hostButton_pressed"]

[connection signal="item_selected" from="connect/Tabs/Join/hostList" to="." method="_on_hostList_item_selected"]

[connection signal="pressed" from="connect/Tabs/Join/joinButton" to="." method="_on_joinButton_pressed"]

[connection signal="pressed" from="connect/Tabs/Join/refresh" to="." method="refresh_hostList"]

[connection signal="text_changed" from="connect/Tabs/Settings/nick" to="." method="_on_nick_text_changed"]

[connection signal="color_changed" from="connect/Tabs/Settings/colorPick" to="." method="_on_colorPick_color_changed"]

[connection signal="pressed" from="wait/start" to="." method="_on_start_pressed"]


